# scalper-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: binance.rs  data.rs  exchanges.rs  graphics.rs  main.rs  models.rs  notifications.rs  renderer.rs  streams.rs  trader.rs  use_cases.rs  utils.rs
src/binance/: account_stream.rs  api.rs  auth.rs  client.rs  errors.rs  market_stream.rs  streams.rs  types.rs
src/binance/api/: symbol.rs
src/binance/streams/: candles.rs  dom.rs  order_flow.rs
src/data/: candles.rs  color.rs  config.rs  dom.rs  timestamp.rs
src/exchanges/: README.md  base.rs  binance_futures.rs  binance_spot.rs  binance_us_spot.rs  binance_usd_futures.rs  binance_usdt_futures.rs  factory.rs  gateio_usd_futures.rs
src/exchanges/base/: client.rs  errors.rs  exchange.rs
src/exchanges/binance_futures/: auth.rs  client.rs  errors.rs  exchange.rs  market_stream.rs  open_interest_stream.rs  orders_stream.rs
src/exchanges/binance_spot/: client.rs  exchange.rs  (+2 more)
src/graphics/: candles.rs  dom.rs  order_book.rs  order_flow.rs  orders.rs  status.rs  text.rs
src/models/: alerts.rs  bid_ask.rs  candles.rs  color.rs  color_schema.rs  config.rs  dom.rs  interval.rs  layout.rs  logs.rs  messages.rs  open_interest.rs  order_book.rs  order_flow.rs  orders.rs  price_alerts.rs  px_per_tick.rs  scale.rs  shared_state.rs  sizes.rs  sound.rs  symbol.rs  timestamp.rs  trader.rs
src/streams/: candles.rs  dom.rs
src/trader/: models.rs
src/use_cases/: listen_open_interest.rs  listen_orders.rs  listen_streams.rs
src/utils/: sleep.rs  sound.rs
(+14 files in other folders)
