[package]
name = "scalper"
version = "0.1.0"
edition = "2024"

[dependencies]
font-kit = "0.14.3"
minifb = "0.28.0"
raqote = "0.8.5"
reqwest = { version = "0.12.23", features = ["json", "native-tls", "blocking"] }
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
toml = "0.9.8"
dirs = "6.0.0"
chrono = "0.4.42"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
f64-fixed = "0.2.1"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
